# OFC_Solver

./: .gitignore  README.md  ofc_ai.py  pyproject.toml
ai/: __init__.py  fast_opponent_policy.py  heuristic_policy.py  monte_carlo_policy.py  policy.py  random_policy.py  rollout.py
benchmarks/: bench_evaluator.py  bench_fantasy.py  bench_policy.py  bench_rollout.py  bench_self_play.py
docs/: API.md  opening_book_strategy.md  opening_book_strategy_v3.md
engine/: __init__.py  cards.py  deck.py  evaluator.py  fantasy.py  royalties.py  rules.py  scoring.py
fantasy/: __init__.py  cards_mask.py  fantasy_eval.py  fantasy_search.py  fantasy_solver.py
scripts/: __init__.py  analyze_opening_book.py  bench_concurrency.py  bench_local.py  bench_overflow.py  build_all_tables.py  build_full_opening_book.py  eval_tables.py  play_with_tables.py  profile_fast.py  watch_and_launch_phase2.sh
simulation/: __init__.py  collectors.py  evaluation.py  policy_factories.py  self_play.py  storage.py  trace.py
state/: __init__.py  action.py  board.py  game_state.py
tables/: __init__.py  canonical_opening.py  fantasy_cache.py  fantasy_ev.py  foul_prob.py  loader.py  opening_book.py  policy_prior.py  signatures.py  table_aware_policy.py  transposition.py  welford.py
tests/: test_actions.py  test_canonical_opening_horizon.py  test_cards.py  test_deck.py  test_evaluator.py  test_fantasy.py  test_game_state.py  test_heuristic.py  test_monte_carlo.py  test_rollout.py  test_royalties.py  test_rules.py  test_self_play.py  test_tables.py
ui/: __init__.py  analyzer.py  analyzer_fast.py  (+2 more)
(+3 files in other folders)
